typescript/checker/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName10.ts.stderr
error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName10.ts:3:4
  |
3 |    [e] = 1
  |    ^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName10.ts:3:5
  |
3 |    [e] = 1
  |     ^

